Allow user to change server side aliases.

BUG: 151507
BUG: 140816
GUI:


svn path=/trunk/KDE/kdenetwork/kopete/; revision=731724